# pdtt

./: README.md
admin-app/: next.config.ts  package-lock.json  package.json  verify_merkle.js
admin-app/app/: layout.tsx  page.tsx
admin-app/components/: coupon-voucher.tsx  role-selector.tsx  wallet-selector.tsx
backend/: .gitignore  generate_fake_data.py  init_db.py  insert_daily_scan_activity.sql  insert_dietary_habits_activity.sql  insert_luckin_coffee_activity.sql  main.py  migrate_activities.sql  migrate_add_target_store_item.sql  migrate_add_target_store_item_to_vouchers.sql  migrate_campaigns.py  migrate_campaigns.sql  migrate_campaigns_add_fields.sql  migrate_models.sql  migrate_models_add_github.sql  migrate_notifications.sql  migrate_notifications_add_read.sql  migrate_receipts.py  migrate_user_vouchers.sql  pyproject.toml  run_migration.py  seed_categories.py  seed_models.py  update_daily_scan_reward.sql  verify_merkle.py
backend/model_supplier/: supplier.py
backend/model_supplier/base/: model.py
backend/model_supplier/customer_segmentation_model/: model.py
backend/test/: demo_deepseek.py  demo_openai.py  ocr_prompt.md
contract/: Move.toml
contract/sources/: activity.move  ad_rewards.move  sym_token.move
persdato/: README.md  pubspec.yaml
persdato/lib/: main.dart
persdato/test/: widget_test.dart
web-app/: next.config.ts  package-lock.json  package.json
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/components/: balance-display.tsx  chatbot.tsx  coupon-voucher.tsx  (+4 more)
website/: package-lock.json  package.json
(+63 files in other folders)
