[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "openai>=2.7.2",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.6.1",
    "greenlet>=3.0.3",
]
